force-app/main/default/objects/PriceBookEntry_PBS__c/PriceBookEntry_PBS__c.object-meta.xml
<CustomObject>
    <label>PriceBookEntry PBS</label>
    <nameField>
        <label>PriceBookEntry PBS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PriceBookEntries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>