force-app/main/default/objects/PriceBookEntry_PBS__c/fields/Price_Book_PBS__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_PBS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book PBS</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>PriceBookEntries</relationshipLabel>
    <relationshipName>PriceBookEntries</relationshipName>
    <type>Lookup</type>
</CustomField>