force-app/main/default/objects/PriceBookEntry_PBS__c/fields/Product_PBS__c.field-meta.xml
<CustomField>
    <fullName>Product_PBS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product PBS</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PriceBookEntries</relationshipLabel>
    <relationshipName>PriceBookEntries</relationshipName>
    <type>Lookup</type>
</CustomField>