force-app/main/default/objects/PriceBookEntry_PBS__c/fields/Unit_Price_PBS__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_PBS__c</fullName>
    <label>Unit Price PBS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>